// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`customers_mandates .all() should return a list of all customer mandates 1`] = `
Array [
  Mandate {
    "_links": Object {
      "customer": Object {
        "href": "https://api.mollie.com/v2/customers/cst_8wmqcHMN4U",
        "type": "application/hal+json",
      },
      "documentation": Object {
        "href": "https://mollie.com/en/docs/reference/customers/create-mandate",
        "type": "text/html",
      },
      "self": Object {
        "href": "https://api.mollie.com/v2/customers/cst_8wmqcHMN4U/mandates/mdt_AcQl5fdL4h",
        "type": "application/hal+json",
      },
    },
    "createdAt": "2018-05-07T10:49:08+00:00",
    "details": Object {
      "consumerAccount": "NL55INGB0000000000",
      "consumerBic": "INGBNL2A",
      "consumerName": "John Doe",
    },
    "id": "mdt_AcQl5fdL4h",
    "mandateReference": null,
    "method": "directdebit",
    "resource": "mandate",
    "signatureDate": "2018-05-07",
    "status": "valid",
  },
]
`;

exports[`customers_mandates .all() should work with a callback 1`] = `
Array [
  Mandate {
    "_links": Object {
      "customer": Object {
        "href": "https://api.mollie.com/v2/customers/cst_8wmqcHMN4U",
        "type": "application/hal+json",
      },
      "documentation": Object {
        "href": "https://mollie.com/en/docs/reference/customers/create-mandate",
        "type": "text/html",
      },
      "self": Object {
        "href": "https://api.mollie.com/v2/customers/cst_8wmqcHMN4U/mandates/mdt_AcQl5fdL4h",
        "type": "application/hal+json",
      },
    },
    "createdAt": "2018-05-07T10:49:08+00:00",
    "details": Object {
      "consumerAccount": "NL55INGB0000000000",
      "consumerBic": "INGBNL2A",
      "consumerName": "John Doe",
    },
    "id": "mdt_AcQl5fdL4h",
    "mandateReference": null,
    "method": "directdebit",
    "resource": "mandate",
    "signatureDate": "2018-05-07",
    "status": "valid",
  },
]
`;

exports[`customers_mandates .create() should return a mandate instance 1`] = `
Mandate {
  "_links": Object {
    "customer": Object {
      "href": "https://api.mollie.com/v2/customers/cst_8wmqcHMN4U",
      "type": "application/hal+json",
    },
    "documentation": Object {
      "href": "https://mollie.com/en/docs/reference/customers/create-mandate",
      "type": "text/html",
    },
    "self": Object {
      "href": "https://api.mollie.com/v2/customers/cst_8wmqcHMN4U/mandates/mdt_AcQl5fdL4h",
      "type": "application/hal+json",
    },
  },
  "createdAt": "2018-05-07T10:49:08+00:00",
  "details": Object {
    "consumerAccount": "NL55INGB0000000000",
    "consumerBic": "INGBNL2A",
    "consumerName": "John Doe",
  },
  "id": "mdt_AcQl5fdL4h",
  "mandateReference": null,
  "method": "directdebit",
  "resource": "mandate",
  "signatureDate": "2018-05-07",
  "status": "valid",
}
`;

exports[`customers_mandates .create() should work with a callback 1`] = `
Mandate {
  "_links": Object {
    "customer": Object {
      "href": "https://api.mollie.com/v2/customers/cst_8wmqcHMN4U",
      "type": "application/hal+json",
    },
    "documentation": Object {
      "href": "https://mollie.com/en/docs/reference/customers/create-mandate",
      "type": "text/html",
    },
    "self": Object {
      "href": "https://api.mollie.com/v2/customers/cst_8wmqcHMN4U/mandates/mdt_AcQl5fdL4h",
      "type": "application/hal+json",
    },
  },
  "createdAt": "2018-05-07T10:49:08+00:00",
  "details": Object {
    "consumerAccount": "NL55INGB0000000000",
    "consumerBic": "INGBNL2A",
    "consumerName": "John Doe",
  },
  "id": "mdt_AcQl5fdL4h",
  "mandateReference": null,
  "method": "directdebit",
  "resource": "mandate",
  "signatureDate": "2018-05-07",
  "status": "valid",
}
`;

exports[`customers_mandates .revoke() should return a mandate instance 1`] = `
Mandate {
  "_links": Object {
    "customer": Object {
      "href": "https://api.mollie.com/v2/customers/cst_8wmqcHMN4U",
      "type": "application/hal+json",
    },
    "documentation": Object {
      "href": "https://mollie.com/en/docs/reference/customers/create-mandate",
      "type": "text/html",
    },
    "self": Object {
      "href": "https://api.mollie.com/v2/customers/cst_8wmqcHMN4U/mandates/mdt_AcQl5fdL4h",
      "type": "application/hal+json",
    },
  },
  "createdAt": "2018-05-07T10:49:08+00:00",
  "details": Object {
    "consumerAccount": "NL55INGB0000000000",
    "consumerBic": "INGBNL2A",
    "consumerName": "John Doe",
  },
  "id": "mdt_AcQl5fdL4h",
  "mandateReference": null,
  "method": "directdebit",
  "resource": "mandate",
  "signatureDate": "2018-05-07",
  "status": "valid",
}
`;

exports[`customers_mandates .revoke() should work with cancel alias and a callback 1`] = `
Mandate {
  "_links": Object {
    "customer": Object {
      "href": "https://api.mollie.com/v2/customers/cst_8wmqcHMN4U",
      "type": "application/hal+json",
    },
    "documentation": Object {
      "href": "https://mollie.com/en/docs/reference/customers/create-mandate",
      "type": "text/html",
    },
    "self": Object {
      "href": "https://api.mollie.com/v2/customers/cst_8wmqcHMN4U/mandates/mdt_AcQl5fdL4h",
      "type": "application/hal+json",
    },
  },
  "createdAt": "2018-05-07T10:49:08+00:00",
  "details": Object {
    "consumerAccount": "NL55INGB0000000000",
    "consumerBic": "INGBNL2A",
    "consumerName": "John Doe",
  },
  "id": "mdt_AcQl5fdL4h",
  "mandateReference": null,
  "method": "directdebit",
  "resource": "mandate",
  "signatureDate": "2018-05-07",
  "status": "valid",
}
`;
